# mcp-builder

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
docs/: cli.md  index.md  quickstart.md
fixtures/hello-python-sse/: requirements.txt  server_sse.py
mcp_builder/: cli.py  core.py  logging.py  planner.py  types.py  validator.py
mcp_builder/buildpacks/: node.py  python.py
mcp_builder/conformance/: runner.py  testspec.py
mcp_builder/detect/: base.py  node_pkg.py  python_ast.py
mcp_builder/installer/: env_node.py  env_python.py  install copy.py  install.py  surfaces.py
mcp_builder/package/: docker.py  zip.py
mcp_builder/schema/: mcp.server.schema.json  plan.schema.json  runner.schema.json
mcp_builder/security/: archive.py
mcp_builder/signing/: checks.py
tests/: test_modules.sh
tests/integration/: test_install_from_dir.py
tests/unit/: test_scaffold_and_hash.py
