[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mcp-builder"
version = "0.1.0"
description = "Build, package, install, and validate MCP servers (Matrix Hub–compatible)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ruslan Magana Vsevolodovna", email = "contact@ruslanmv.com" }
]
keywords = ["mcp", "matrixhub", "builder", "modelcontextprotocol", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools",
]

# ✅ PEP 621 requires an array of strings here
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "jsonschema>=4.22",
  "jinja2>=3.1",
  "anyio>=4",
  "httpx>=0.27",
  "rich>=13",
  "filelock>=3.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.3.1", 
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.10",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.scripts]
mcp-builder = "mcp_builder.cli:app"

[project.urls]
Homepage = "https://github.com/ruslanmv/mcp-builder"
Repository = "https://github.com/ruslanmv/mcp-builder"
Documentation = "https://ruslanmv.github.io/mcp-builder"

# -------------------------- Tooling configuration --------------------------- #

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","N","B"]
exclude = ["dist", "build", ".venv", "site"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true

# --------------------------- Hatch build settings --------------------------- #

# Ensure non-Python assets (schemas) are included in wheels/sdists.
[tool.hatch.build]
include = [
  "mcp_builder/**/*.py",
  "mcp_builder/schema/*.json",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_builder"]

[tool.hatch.build.targets.sdist]
include = [
  "mcp_builder",
  "README.md",
  "LICENSE",
]
